--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
                     <artifactId>maven-rar-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.jboss.as.plugins</groupId>
+                    <artifactId>jboss-as-maven-plugin</artifactId>
+                    <version>7.9.Final</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -167,5 +172,6 @@
     </dependencyManagement>
     <modules>
         <module>ethereum-rar</module>
+        <module>ethereum-rar-demo</module>
     </modules>
 </project>
