--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
                     <artifactId>jboss-as-maven-plugin</artifactId>
                     <version>7.9.Final</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ear-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -126,6 +131,11 @@
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-all-6.0</artifactId>
                 <version>3.0.3.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.ejb3</groupId>
+                <artifactId>jboss-ejb3-ext-api</artifactId>
+                <version>2.2.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -173,5 +183,6 @@
     <modules>
         <module>ethereum-rar</module>
         <module>ethereum-rar-demo</module>
+        <module>ethereum-rar-demo-deploy</module>
     </modules>
 </project>
