--- a/ethereum-ra/pom.xml
+++ b/ethereum-ra/pom.xml
@@ -8,26 +8,19 @@
         <artifactId>ethereum-resource-adapter</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <name>Ethereum Resource Adapter Archive</name>
+    <name>Ethereum Resource Adapter</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-    <artifactId>ethereum-rar</artifactId>
-    <packaging>rar</packaging>
-
+    <artifactId>ethereum-ra</artifactId>
+    <packaging>jar</packaging>
+    
     <dependencies>
-        <dependency>
-            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-ra</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-all-6.0</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
     
