--- a/pom.xml
+++ b/pom.xml
@@ -184,5 +184,6 @@
         <module>ethereum-rar</module>
         <module>ethereum-rar-demo</module>
         <module>ethereum-rar-demo-deploy</module>
+        <module>ethereum-ra</module>
     </modules>
 </project>
