--- a/ethereum-ra/pom.xml
+++ b/ethereum-ra/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
