--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@
                 <artifactId>commons-lang</artifactId>
                 <version>2.6</version>
             </dependency>
+            <dependency>
+                <groupId>org.web3j</groupId>
+                <artifactId>core</artifactId>
+                <version>3.3.2-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
