--- a/ethereum-ra/pom.xml
+++ b/ethereum-ra/pom.xml
@@ -26,6 +26,10 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
