--- a/ethereum-ra/pom.xml
+++ b/ethereum-ra/pom.xml
@@ -13,6 +13,25 @@
     <artifactId>ethereum-ra</artifactId>
     <packaging>jar</packaging>
     
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>ethereum-resource-adapter-version.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>ethereum-resource-adapter-version.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
+    
     <dependencies>
         <dependency>
             <groupId>org.jboss.spec</groupId>
