--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -23,6 +23,10 @@
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
                     <earSourceDirectory>${project.build.outputDirectory}</earSourceDirectory>
                     <modules>
+                        <ejbModule>
+                            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                            <artifactId>ethereum-rar-demo-model</artifactId>
+                        </ejbModule>
                         <webModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
                             <artifactId>ethereum-rar-demo</artifactId>
@@ -59,6 +63,12 @@
             <artifactId>ethereum-rar-demo</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-rar-demo-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
