--- a/ethereum-rar-demo-model/pom.xml
+++ b/ethereum-rar-demo-model/pom.xml
@@ -8,10 +8,38 @@
         <artifactId>ethereum-resource-adapter</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <name>Ethereum Resource Adapter Demo Web Application</name>
+    <name>Ethereum Resource Adapter Demo Model</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-    <artifactId>ethereum-rar-demo</artifactId>
-    <packaging>war</packaging>
+    <artifactId>ethereum-rar-demo-model</artifactId>
+    <packaging>ejb</packaging>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ejb-plugin</artifactId>
+                <configuration>
+                    <ejbVersion>3.1</ejbVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>META-INF/jboss-ejb3.xml</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>META-INF/jboss-ejb3.xml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
     
     <dependencies>
         <dependency>
@@ -28,13 +56,6 @@
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-rar-demo-model</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>ejb</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
