--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
                 <artifactId>core</artifactId>
                 <version>3.3.2-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.9</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
