--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -25,6 +25,10 @@
                     <modules>
                         <ejbModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                            <artifactId>ethereum-ra-oracle</artifactId>
+                        </ejbModule>
+                        <ejbModule>
+                            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
                             <artifactId>ethereum-rar-demo-model</artifactId>
                         </ejbModule>
                         <webModule>
@@ -60,6 +64,12 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra-oracle</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-rar-demo</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>war</type>
@@ -75,6 +85,12 @@
             <artifactId>ethereum-rar</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>rar</type>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <!-- jffi within the RAR makes the VM crash in JBoss EAP, moving web3j to the EAR level fixes the issue -->
