--- a/ethereum-rar-demo/pom.xml
+++ b/ethereum-rar-demo/pom.xml
@@ -38,6 +38,13 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra-oracle</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>ejb</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
