--- a/pom.xml
+++ b/pom.xml
@@ -214,5 +214,6 @@
         <module>ethereum-ra-oracle-api</module>
         <module>ethereum-ra-oracle-node</module>
         <module>ethereum-ra-oracle</module>
+        <module>ethereum-ra-api</module>
     </modules>
 </project>
