--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -23,6 +23,11 @@
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
                     <earSourceDirectory>${project.build.outputDirectory}</earSourceDirectory>
                     <modules>
+                        <rarModule>
+                            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                            <artifactId>ethereum-rar</artifactId>
+                            <bundleFileName>ethereum-ra.rar</bundleFileName>
+                        </rarModule>
                         <ejbModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
                             <artifactId>ethereum-ra-oracle</artifactId>
@@ -36,11 +41,6 @@
                             <artifactId>ethereum-rar-demo</artifactId>
                             <contextRoot>/ethereum-demo</contextRoot>
                         </webModule>
-                        <rarModule>
-                            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-                            <artifactId>ethereum-rar</artifactId>
-                            <bundleFileName>ethereum-ra.rar</bundleFileName>
-                        </rarModule>
                     </modules>
                 </configuration>
             </plugin>
@@ -90,6 +90,17 @@
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-oracle-node</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra-oracle-default</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
