--- a/ethereum-ra-oracle-api/pom.xml
+++ b/ethereum-ra-oracle-api/pom.xml
@@ -17,6 +17,10 @@
             <groupId>org.jboss.spec</groupId>
             <artifactId>jboss-javaee-all-6.0</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
