--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -48,6 +48,10 @@
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
     
