--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
                     <artifactId>ironjacamar-validator-maven</artifactId>
                     <version>1.4.8.Final</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>1.2.1.Final</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
