--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             </roles>
         </developer>
     </developers>
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>LICENSE.txt</url>
+        </license>
+    </licenses>
     <build>
         <pluginManagement>
             <plugins>
