more work on transaction commit

--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -35,6 +35,7 @@
                         <ejbModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
                             <artifactId>ethereum-ra-oracle-default</artifactId>
+                            <excluded>${module.oracles.excluded}</excluded>
                         </ejbModule>
                         <ejbModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -96,17 +97,6 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-ra-oracle-node</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-ra-oracle-default</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <type>ejb</type>
-        </dependency>
-        <dependency>
-            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>provided</scope>
@@ -128,5 +118,44 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
+    
+    <profiles>
+        <profile>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                    <artifactId>ethereum-ra-oracle-node</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                    <artifactId>ethereum-ra-oracle-default</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                    <type>ejb</type>
+                </dependency>
+            </dependencies>
+            <properties>
+                <module.oracles.excluded>false</module.oracles.excluded>
+            </properties>
+        </profile>
+        <profile>
+            <id>NoOracles</id>
+            <properties>
+                <module.oracles.excluded>true</module.oracles.excluded>
+            </properties>
+            <dependencies>
+                <!-- even though not included in the EAR, we need this to keep maven-ear-plugin happy -->
+                <dependency>
+                    <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+                    <artifactId>ethereum-ra-oracle-default</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                    <type>ejb</type>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     
 </project>
