--- a/ethereum-rar-demo/src/main/webapp/WEB-INF/web.xml
+++ b/ethereum-rar-demo/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,12 @@
         <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
         <param-value>true</param-value>
     </context-param>
+    
+    <context-param>
+        <!-- weblogic -->
+        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+        <param-value>client</param-value>
+    </context-param>
 
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
