--- a/ethereum-rar-demo-model/pom.xml
+++ b/ethereum-rar-demo-model/pom.xml
@@ -22,6 +22,48 @@
                     <ejbVersion>3.1</ejbVersion>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.web3j</groupId>
+                <artifactId>web3j-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                        <configuration>
+                            <soliditySourceFiles>
+                                <directory>${basedir}/src/main/solidity</directory>
+                                <includes>
+                                    <include>**/*.sol</include>
+                                </includes>
+                            </soliditySourceFiles>
+                            <sourceDestination>${basedir}/target/generated-sources/solidity</sourceDestination>
+                            <packageName>be.e_contract.ethereum.rar.demo.model.contract</packageName>
+                            <nativeJavaType>true</nativeJavaType>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${basedir}/target/generated-sources/solidity</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -37,6 +79,9 @@
                 <includes>
                     <include>META-INF/jboss-ejb3.xml</include>
                 </includes>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/solidity</directory>
             </resource>
         </resources>
     </build>
