--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
                     <artifactId>wildfly-maven-plugin</artifactId>
                     <version>1.2.1.Final</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.web3j</groupId>
+                    <artifactId>web3j-maven-plugin</artifactId>
+                    <version>0.2.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
