--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
-                <version>3.3.1-econtract-1</version>
+                <version>3.3.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
