--- a/ethereum-rar-demo/pom.xml
+++ b/ethereum-rar-demo/pom.xml
@@ -32,6 +32,16 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-jsf</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-rar-demo-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <type>ejb</type>
