--- a/pom.xml
+++ b/pom.xml
@@ -242,5 +242,6 @@
         <module>ethereum-ra-oracle</module>
         <module>ethereum-ra-api</module>
         <module>ethereum-ra-oracle-default</module>
+        <module>ethereum-jsf</module>
     </modules>
 </project>
