another glassfish attempt

--- a/ethereum-ra-oracle/pom.xml
+++ b/ethereum-ra-oracle/pom.xml
@@ -29,6 +29,7 @@
                 <filtering>false</filtering>
                 <excludes>
                     <exclude>META-INF/jboss-ejb3.xml</exclude>
+                    <exclude>META-INF/sun-ejb-jar.xml</exclude>
                 </excludes>
             </resource>
             <resource>
@@ -36,6 +37,7 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>META-INF/jboss-ejb3.xml</include>
+                    <include>META-INF/sun-ejb-jar.xml</include>
                 </includes>
             </resource>
         </resources>
