--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.21.0</version>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                     </configuration>
@@ -139,7 +139,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goals>install</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
@@ -161,6 +160,17 @@
         <connection>scm:git:e-contract.be:git/ethereum-resource-adapter.git</connection>
         <tag>HEAD</tag>
     </scm>
+    <distributionManagement>
+        <downloadUrl>https://www.e-contract.be/maven2/be/e-contract/ethereum-resource-adapter/</downloadUrl>
+        <repository>
+            <id>e-contract-deploy</id>
+            <url>sftp://192.168.100.1/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+    </distributionManagement>
+    <issueManagement>
+        <url>https://github.com/e-Contract/ethereum-resource-adapter/issues</url>
+    </issueManagement>
     <dependencyManagement>
         <dependencies>
             <dependency>
