--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,18 @@
                 <artifactId>joda-time</artifactId>
                 <version>2.9.9</version>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>1.4.0.Final</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-container-remote</artifactId>
+                <version>2.1.0.Final</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
