--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,13 @@
                 <artifactId>wildfly-arquillian-container-remote</artifactId>
                 <version>2.1.0.Final</version>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>3.1.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
