--- a/ethereum-ra-oracle-node/pom.xml
+++ b/ethereum-ra-oracle-node/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-ra-oracle-api</artifactId>
+            <artifactId>ethereum-ra-oracle-spi</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
