--- a/ethereum-ra-oracle-spi/pom.xml
+++ b/ethereum-ra-oracle-spi/pom.xml
@@ -8,9 +8,9 @@
         <artifactId>ethereum-resource-adapter</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <name>Ethereum Resource Adapter Oracle API</name>
+    <name>Ethereum Resource Adapter Oracle SPI</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-    <artifactId>ethereum-ra-oracle-api</artifactId>
+    <artifactId>ethereum-ra-oracle-spi</artifactId>
     
     <dependencies>
         <dependency>
