--- a/pom.xml
+++ b/pom.xml
@@ -270,7 +270,7 @@
         <module>ethereum-rar-demo-deploy</module>
         <module>ethereum-ra</module>
         <module>ethereum-rar-demo-model</module>
-        <module>ethereum-ra-oracle-api</module>
+        <module>ethereum-ra-oracle-spi</module>
         <module>ethereum-ra-oracle-node</module>
         <module>ethereum-ra-oracle</module>
         <module>ethereum-ra-api</module>
