--- a/ethereum-ra-oracle/pom.xml
+++ b/ethereum-ra-oracle/pom.xml
@@ -54,6 +54,11 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-ra-oracle-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-oracle-spi</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
