--- a/ethereum-rar-demo/pom.xml
+++ b/ethereum-rar-demo/pom.xml
@@ -49,9 +49,8 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-ra-oracle</artifactId>
+            <artifactId>ethereum-ra-oracle-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <type>ejb</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
