--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.jboss.as</groupId>
+                <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                <version>7.2.0.Final</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
