--- a/ethereum-rar/pom.xml
+++ b/ethereum-rar/pom.xml
@@ -14,6 +14,13 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-rar-plugin</artifactId>
+                <configuration>
+                    <filterRarSourceDirectory>true</filterRarSourceDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jboss.ironjacamar</groupId>
                 <artifactId>ironjacamar-validator-maven</artifactId>
                 <executions>
