--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <log4j.version>2.11.1</log4j.version>
         <web3j.version>4.1.0</web3j.version>
+        <ethereum-node-location>http://127.0.0.1:8545</ethereum-node-location>
     </properties>
     <scm>
         <connection>scm:git:e-contract.be:git/ethereum-resource-adapter.git</connection>
