--- a/ethereum-rar-demo-model/pom.xml
+++ b/ethereum-rar-demo-model/pom.xml
@@ -110,6 +110,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
+            <artifactId>ethereum-utils</artifactId>
+            <version>1.2.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
