--- a/ethereum-rar-demo/pom.xml
+++ b/ethereum-rar-demo/pom.xml
@@ -11,6 +11,18 @@
     <artifactId>ethereum-rar-demo</artifactId>
     <packaging>war</packaging>
     
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.jboss.spec</groupId>
