--- a/ethereum-rar-demo-model/pom.xml
+++ b/ethereum-rar-demo-model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.2.7-SNAPSHOT</version>
+        <version>1.2.7</version>
     </parent>
     <name>Ethereum Resource Adapter Demo Model</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -107,19 +107,19 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
-            <version>1.2.7-SNAPSHOT</version>
+            <version>1.2.7</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-oracle-api</artifactId>
-            <version>1.2.7-SNAPSHOT</version>
+            <version>1.2.7</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-utils</artifactId>
-            <version>1.2.7-SNAPSHOT</version>
+            <version>1.2.7</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
