9056: fix for ironjacamar-validator-maven

--- a/ethereum-rar/pom.xml
+++ b/ethereum-rar/pom.xml
@@ -40,6 +40,11 @@
                         <artifactId>validation-api</artifactId>
                         <version>1.0.0.GA</version>
                     </dependency>
+                    <dependency>
+                        <groupId>javax.resource</groupId>
+                        <artifactId>javax.resource-api</artifactId>
+                        <version>1.7.1</version>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
