11534: Java EE 8 migration

--- a/ethereum-ra-api/pom.xml
+++ b/ethereum-ra-api/pom.xml
@@ -14,7 +14,8 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-all-6.0</artifactId>
+            <artifactId>jboss-javaee-all-8.0</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
