--- a/ethereum-ra-oracle-default/pom.xml
+++ b/ethereum-ra-oracle-default/pom.xml
@@ -13,6 +13,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-all-8.0</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
