--- a/ethereum-utils/pom.xml
+++ b/ethereum-utils/pom.xml
@@ -14,7 +14,8 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-all-6.0</artifactId>
+            <artifactId>jboss-javaee-all-8.0</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
