--- a/pom.xml
+++ b/pom.xml
@@ -197,13 +197,13 @@
         <dependencies>
             <dependency>
                 <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-all-6.0</artifactId>
-                <version>3.0.3.Final</version>
+                <artifactId>jboss-javaee-all-8.0</artifactId>
+                <version>1.0.4.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.ejb3</groupId>
                 <artifactId>jboss-ejb3-ext-api</artifactId>
-                <version>2.2.0.Final</version>
+                <version>2.3.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -264,17 +264,20 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-arquillian-container-remote</artifactId>
-                <version>7.2.0.Final</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     <repositories>
         <repository>
             <id>bintray-web3j</id>
             <url>https://dl.bintray.com/web3j/maven/</url>
+        </repository>
+        <repository>
+            <id>jboss</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
         </repository>
     </repositories>
     <pluginRepositories>
