--- a/ethereum-rar-demo-deploy/pom.xml
+++ b/ethereum-rar-demo-deploy/pom.xml
@@ -28,11 +28,6 @@
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
                     <earSourceDirectory>${project.build.outputDirectory}</earSourceDirectory>
                     <modules>
-                        <rarModule>
-                            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-                            <artifactId>ethereum-rar</artifactId>
-                            <bundleFileName>ethereum-ra.rar</bundleFileName>
-                        </rarModule>
                         <ejbModule>
                             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
                             <artifactId>ethereum-ra-oracle</artifactId>
@@ -65,10 +60,6 @@
                         </env-entry>
                     </envEntries>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
@@ -120,12 +111,6 @@
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
-            <artifactId>ethereum-rar</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
-            <type>rar</type>
-        </dependency>
-        <dependency>
-            <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
             <version>1.4.0-SNAPSHOT</version>
             <scope>provided</scope>
@@ -137,9 +122,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <!-- jffi within the RAR makes the VM crash in JBoss EAP, moving web3j to the EAR level fixes the issue -->
             <groupId>org.web3j</groupId>
             <artifactId>core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <!-- include this for GlassFish 5 -->
